--- a/SteamMarketApp/App.config
+++ b/SteamMarketApp/App.config
@@ -19,14 +19,20 @@
             <setting name="IsRemembered" serializeAs="String">
                 <value>False</value>
             </setting>
-            <setting name="LastApiCallTimestamp" serializeAs="String">
+            <setting name="LastApiMarketCallTimestamp" serializeAs="String">
                 <value />
             </setting>
-            <setting name="ApiCallPeriod" serializeAs="String">
+            <setting name="ApiMarketCallPeriod" serializeAs="String">
                 <value>00:00:00</value>
             </setting>
             <setting name="SteamLoginSecure" serializeAs="String">
                 <value />
+            </setting>
+            <setting name="LastApiInventoryCallTimestamp" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="ApiInventoryCallPeriod" serializeAs="String">
+                <value>00:00:00</value>
             </setting>
         </SteamMarketApp.Properties.Settings>
     </userSettings>
