--- a/SteamMarketApp/Properties/Settings.settings
+++ b/SteamMarketApp/Properties/Settings.settings
@@ -11,10 +11,10 @@
     <Setting Name="IsRemembered" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
-    <Setting Name="LastApiCallTimestamp" Type="System.DateTime" Scope="User">
+    <Setting Name="LastApiMarketCallTimestamp" Type="System.DateTime" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
-    <Setting Name="ApiCallPeriod" Type="System.TimeSpan" Scope="User">
+    <Setting Name="ApiMarketCallPeriod" Type="System.TimeSpan" Scope="User">
       <Value Profile="(Default)">00:00:00</Value>
     </Setting>
     <Setting Name="ConnectionString" Type="System.String" Scope="Application">
@@ -25,6 +25,12 @@
     </Setting>
     <Setting Name="SteamLoginSecure" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="LastApiInventoryCallTimestamp" Type="System.DateTime" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="ApiInventoryCallPeriod" Type="System.TimeSpan" Scope="User">
+      <Value Profile="(Default)">00:00:00</Value>
     </Setting>
   </Settings>
 </SettingsFile>
